// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extract for a provided glob resolves with the snippets for each files & skips empty ones 1`] = `
Array [
  Object {
    "file": "snippets-2.md",
    "lang": "all",
    "snippets": Array [
      Object {
        "lang": "js",
        "line": 4,
        "meta": "",
        "value": "console.log(\\"Hello, World!\\")",
      },
    ],
  },
  Object {
    "file": "snippets.md",
    "lang": "all",
    "snippets": Array [
      Object {
        "lang": "js",
        "line": 4,
        "meta": "# (meta) (tags)",
        "value": "console.log(\\"Hello, World!\\")",
      },
      Object {
        "lang": "javascript",
        "line": 10,
        "meta": "",
        "value": "console.log(\\"Hello, World!\\")",
      },
      Object {
        "lang": "go",
        "line": 18,
        "meta": "",
        "value": "package main

import \\"fmt\\"

func main() {
  fmt.Println(\\"Hello, World!\\")
}",
      },
      Object {
        "lang": "golang",
        "line": 29,
        "meta": "",
        "value": "package main

import \\"fmt\\"

func main() {
  fmt.Println(\\"Hello, World!\\")
}",
      },
      Object {
        "lang": "bash",
        "line": 42,
        "meta": "",
        "value": "$ echo 'Hello, World!'",
      },
    ],
  },
]
`;

exports[`extractSingle when a language is provided extracts the corresponding snippets from a file 1`] = `
Object {
  "file": "snippets.md",
  "lang": Array [
    "js",
    "javascript",
  ],
  "snippets": Array [
    Object {
      "lang": "js",
      "line": 4,
      "meta": "# (meta) (tags)",
      "value": "console.log(\\"Hello, World!\\")",
    },
    Object {
      "lang": "javascript",
      "line": 10,
      "meta": "",
      "value": "console.log(\\"Hello, World!\\")",
    },
  ],
}
`;

exports[`extractSingle when a language is provided extracts the corresponding snippets from a file 2`] = `
Object {
  "file": "snippets.md",
  "lang": "bash",
  "snippets": Array [
    Object {
      "lang": "bash",
      "line": 42,
      "meta": "",
      "value": "$ echo 'Hello, World!'",
    },
  ],
}
`;

exports[`extractSingle when a language is provided extracts the corresponding snippets from a file 3`] = `
Object {
  "file": "snippets.md",
  "lang": "go",
  "snippets": Array [
    Object {
      "lang": "go",
      "line": 18,
      "meta": "",
      "value": "package main

import \\"fmt\\"

func main() {
  fmt.Println(\\"Hello, World!\\")
}",
    },
    Object {
      "lang": "go",
      "line": 29,
      "meta": "lang",
      "value": "package main

import \\"fmt\\"

func main() {
  fmt.Println(\\"Hello, World!\\")
}",
    },
  ],
}
`;

exports[`extractSingle when no second argument is passed extracts ALL the snippets from a file 1`] = `
Object {
  "file": "snippets.md",
  "lang": "all",
  "snippets": Array [
    Object {
      "lang": "js",
      "line": 4,
      "meta": "# (meta) (tags)",
      "value": "console.log(\\"Hello, World!\\")",
    },
    Object {
      "lang": "javascript",
      "line": 10,
      "meta": "",
      "value": "console.log(\\"Hello, World!\\")",
    },
    Object {
      "lang": "go",
      "line": 18,
      "meta": "",
      "value": "package main

import \\"fmt\\"

func main() {
  fmt.Println(\\"Hello, World!\\")
}",
    },
    Object {
      "lang": "golang",
      "line": 29,
      "meta": "",
      "value": "package main

import \\"fmt\\"

func main() {
  fmt.Println(\\"Hello, World!\\")
}",
    },
    Object {
      "lang": "bash",
      "line": 42,
      "meta": "",
      "value": "$ echo 'Hello, World!'",
    },
  ],
}
`;
